# kdna-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
analyzers/: failure_classifier.py  patch_proposer.py  regression_analyzer.py
benchmarks/reference-domains/: agent_safety_l3_review_sheet.csv  prompt_diagnosis_l3_review_sheet.csv  writing_l3_review_sheet.csv
benchmarks/reference-domains/agent_safety/2026-06-03/: agent_safety_l2_2026-06-03_combined_scores.json  as_scored_2026-06-03_combined_scores.json  run_20260603_231250_index.json
configs/: agent-safety-openrouter.yaml  agent-safety-siliconflow.yaml  default.yaml  prompt-diagnosis-openrouter.yaml  prompt-diagnosis-siliconflow.yaml  writing-claude-sonnet.yaml  writing-deepseek-v4-flash.yaml  writing-openrouter.yaml  writing-qwen3.7-max.yaml  writing-siliconflow-smoke.yaml  writing-siliconflow.yaml
docs/: architecture.md  case-schema.md  experiment-schema.md  public-vs-internal.md  report-format.md  runner-readiness.md  scoring.md
evidence/domains/kdna CLI v0.18.0/: timeline.json
evidence/runs/run_20260528_235855/: index.json  run.json
examples/agent_safety/: cases.jsonl
examples/cli/: cases.jsonl
examples/code_review/: cases.jsonl
examples/e2e-coaching/: demo.mjs  package.json
examples/kdna_propagation/: TEST_PROTOCOL.md  cases.jsonl  sample_report.md
examples/prompt_diagnosis/: cases.jsonl
examples/schema/: cases.jsonl
examples/writing/: cases.jsonl
fixtures/: README.md
fixtures/invalid_array_risk_model/: KDNA_Patterns.json  kdna.json
fixtures/invalid_missing_boundary_fields/: KDNA_Patterns.json  kdna.json
fixtures/invalid_seven_json_files/: KDNA_Core.json  KDNA_Extra.json  kdna.json
fixtures/invalid_string_action_template/: KDNA_Scenarios.json  kdna.json
fixtures/invalid_string_judgment_role/: KDNA_Core.json  KDNA_Patterns.json  kdna.json
fixtures/kdna_propagation_domain/: KDNA_Core.json  KDNA_Patterns.json  kdna.json
fixtures/legacy_unscoped_domain/: KDNA_Core.json  KDNA_Patterns.json  kdna.json
fixtures/valid_minimal_domain/: KDNA_Patterns.json  kdna.json
kdna_lab/: __init__.py  badge_check.py  cli_runner.py  config.py  domain_runner.py  evidence_store.py  evolution_tracker.py  l2_judge.py  outputs.py  paths.py  portability_check.py  providers.py  registry_check.py  report.py  rule_scorer.py  runner.py  runtime_check.py  schema_check.py  scoring_pipeline.py  spec_check.py  trace_check.py  version_check.py  workpack_check.py
lib/: __init__.py  cases.py  checks.py  config.py  outputs.py  paths.py
reports/: generate_report.py
runners/: run_cli_cases.py  run_cross_model.py  run_domain_benchmark.mjs  run_domain_cases.py
schemas/: case.schema.json  experiment.schema.json
scorers/: llm_judge.py  rule_scorer.py
scripts/: comparison_run.py  evidence_store.py  full_run.py  generate_l3_sheet.py  quick_run.py  run_l2_batch.py
tests/: test_lib.py
(+490 files in other folders)
